Adding relative path for github pages

--- a/members_api/index.html
+++ b/members_api/index.html
@@ -5,8 +5,8 @@
       Members API
     </title>
     <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
-    <link rel="stylesheet" type="text/css" href="/styles.css" />
-    <link rel="stylesheet" type="text/css" href="/github.css" />
+    <link rel="stylesheet" type="text/css" href="fdoc/styles.css" />
+    <link rel="stylesheet" type="text/css" href="fdoc/github.css" />
   </head>
   <body>
     <div id="page">
@@ -17,7 +17,7 @@
 
         <div id="nav">
           
-            <a href="/index.html">
+            <a href="fdoc/index.html">
               &#187; fdoc Sample API
             </a>
           
