Updating example docs

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
       fdoc Sample API
     </title>
     <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
-    <link rel="stylesheet" type="text/css" href="/fdoc/styles.css" />
-    <link rel="stylesheet" type="text/css" href="/fdoc/github.css" />
+    <link rel="stylesheet" type="text/css" href="/styles.css" />
+    <link rel="stylesheet" type="text/css" href="/github.css" />
   </head>
   <body>
     <div id="page">
@@ -30,7 +30,7 @@ for now.</p>
           
             <li>
               <h3>
-                <a href="/fdoc/members_api/index.html"> Members API</a>
+                <a href="/members_api/index.html"> Members API</a>
               </h3>
             </li>
           
@@ -56,8 +56,7 @@ for now.</p>
               <a href="members_api/add-PUT.html">
                 <span class="endpoint-name ">
   <span class="verb">PUT</span>
-  <span class="root">https:&#8203;/&#8203;/api.sample.com&#8203;/members&#8203;/</span>
-  <span class="path">add</span>
+  <span class="root">https:&#8203;/&#8203;/api.sample.com&#8203;/members&#8203;/</span><span class="path">add</span>
   
 </span>
 
@@ -78,8 +77,7 @@ for now.</p>
               <a href="members_api/draft-POST.html">
                 <span class="endpoint-name ">
   <span class="verb">POST</span>
-  <span class="root">https:&#8203;/&#8203;/api.sample.com&#8203;/members&#8203;/</span>
-  <span class="path">draft</span>
+  <span class="root">https:&#8203;/&#8203;/api.sample.com&#8203;/members&#8203;/</span><span class="path">draft</span>
   
 </span>
 
@@ -100,8 +98,7 @@ for now.</p>
               <a href="members_api/list-GET.html">
                 <span class="endpoint-name ">
   <span class="verb">GET</span>
-  <span class="root">https:&#8203;/&#8203;/api.sample.com&#8203;/members&#8203;/</span>
-  <span class="path">list</span>
+  <span class="root">https:&#8203;/&#8203;/api.sample.com&#8203;/members&#8203;/</span><span class="path">list</span>
   
 </span>
 
@@ -112,8 +109,7 @@ for now.</p>
               <a href="members_api/list/complex-params-GET.html">
                 <span class="endpoint-name ">
   <span class="verb">GET</span>
-  <span class="root">https:&#8203;/&#8203;/api.sample.com&#8203;/members&#8203;/</span>
-  <span class="path">list&#8203;/complex-params</span>
+  <span class="root">https:&#8203;/&#8203;/api.sample.com&#8203;/members&#8203;/</span><span class="path">list&#8203;/complex-params</span>
   
 </span>
 
@@ -124,8 +120,7 @@ for now.</p>
               <a href="members_api/list/filter-GET.html">
                 <span class="endpoint-name ">
   <span class="verb">GET</span>
-  <span class="root">https:&#8203;/&#8203;/api.sample.com&#8203;/members&#8203;/</span>
-  <span class="path">list&#8203;/filter</span>
+  <span class="root">https:&#8203;/&#8203;/api.sample.com&#8203;/members&#8203;/</span><span class="path">list&#8203;/filter</span>
   
 </span>
 
