--- a/members_api/index.html
+++ b/members_api/index.html
@@ -5,8 +5,8 @@
       Members API
     </title>
     <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
-    <link rel="stylesheet" type="text/css" href="/fdoc/styles.css" />
-    <link rel="stylesheet" type="text/css" href="/fdoc/github.css" />
+    <link rel="stylesheet" type="text/css" href="/styles.css" />
+    <link rel="stylesheet" type="text/css" href="/github.css" />
   </head>
   <body>
     <div id="page">
@@ -17,7 +17,7 @@
 
         <div id="nav">
           
-            <a href="/fdoc/index.html">
+            <a href="/index.html">
               &#187; fdoc Sample API
             </a>
           
@@ -52,8 +52,7 @@ that&#8217;s perfectly acceptable for a fixture file.</li>
               <a href="add-PUT.html">
                 <span class="endpoint-name ">
   <span class="verb">PUT</span>
-  <span class="root">https:&#8203;/&#8203;/api.sample.com&#8203;/members&#8203;/</span>
-  <span class="path">add</span>
+  <span class="root">https:&#8203;/&#8203;/api.sample.com&#8203;/members&#8203;/</span><span class="path">add</span>
   
 </span>
 
@@ -74,8 +73,7 @@ that&#8217;s perfectly acceptable for a fixture file.</li>
               <a href="draft-POST.html">
                 <span class="endpoint-name ">
   <span class="verb">POST</span>
-  <span class="root">https:&#8203;/&#8203;/api.sample.com&#8203;/members&#8203;/</span>
-  <span class="path">draft</span>
+  <span class="root">https:&#8203;/&#8203;/api.sample.com&#8203;/members&#8203;/</span><span class="path">draft</span>
   
 </span>
 
@@ -96,8 +94,7 @@ that&#8217;s perfectly acceptable for a fixture file.</li>
               <a href="list-GET.html">
                 <span class="endpoint-name ">
   <span class="verb">GET</span>
-  <span class="root">https:&#8203;/&#8203;/api.sample.com&#8203;/members&#8203;/</span>
-  <span class="path">list</span>
+  <span class="root">https:&#8203;/&#8203;/api.sample.com&#8203;/members&#8203;/</span><span class="path">list</span>
   
 </span>
 
@@ -108,8 +105,7 @@ that&#8217;s perfectly acceptable for a fixture file.</li>
               <a href="list/complex-params-GET.html">
                 <span class="endpoint-name ">
   <span class="verb">GET</span>
-  <span class="root">https:&#8203;/&#8203;/api.sample.com&#8203;/members&#8203;/</span>
-  <span class="path">list&#8203;/complex-params</span>
+  <span class="root">https:&#8203;/&#8203;/api.sample.com&#8203;/members&#8203;/</span><span class="path">list&#8203;/complex-params</span>
   
 </span>
 
@@ -120,8 +116,7 @@ that&#8217;s perfectly acceptable for a fixture file.</li>
               <a href="list/filter-GET.html">
                 <span class="endpoint-name ">
   <span class="verb">GET</span>
-  <span class="root">https:&#8203;/&#8203;/api.sample.com&#8203;/members&#8203;/</span>
-  <span class="path">list&#8203;/filter</span>
+  <span class="root">https:&#8203;/&#8203;/api.sample.com&#8203;/members&#8203;/</span><span class="path">list&#8203;/filter</span>
   
 </span>
 
