Updating asset paths

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
       fdoc Sample API
     </title>
     <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
-    <link rel="stylesheet" type="text/css" href="/styles.css" />
-    <link rel="stylesheet" type="text/css" href="/github.css" />
+    <link rel="stylesheet" type="text/css" href="/fdoc/styles.css" />
+    <link rel="stylesheet" type="text/css" href="/fdoc/github.css" />
   </head>
   <body>
     <div id="page">
@@ -30,7 +30,7 @@ for now.</p>
           
             <li>
               <h3>
-                <a href="/members_api/index.html"> Members API</a>
+                <a href="/fdoc/members_api/index.html"> Members API</a>
               </h3>
             </li>
           
